fix: z-index élevé pour l'overlay

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ body {
 	left: 0;
 	width: 99%;
 	height: 99%;
+  z-index: 100;
 }
 
 .modal {
